# arg_eval

./: .gitignore  Pipfile  setup.cfg
src/arg_eval/: eval.py  io.py  metrics.py
src/arg_eval/cli/: __init__.py
